--- a/demoProject1-1/src/main/resources/application.properties
+++ b/demoProject1-1/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.datasource.password=kh1234
 # 8080 -> ipconfig server.port 지정
 
 server.port=8081
+
+#로깅레벨
+#(trace < debug < info < wran < error < fatal)
