--- a/testProject2/src/main/resources/application.properties
+++ b/testProject2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demoProject2
+spring.application.name=testProject2
 
 server.port=8083
 
@@ -7,4 +7,3 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 
 spring.datasource.username=kh_workbook
 spring.datasource.password=kh1234
-
